@@ -1,6 +1,6 @@
 PROJECT(SevenZipJBindingCPP)
 
-GET_PROPERTY(SEVENZIP_JBINDING_JAR  GLOBAL PROPERTY SEVENZIP_JBINDING_JAR) 
+GET_PROPERTY(SEVENZIPJBINDING_JAR  GLOBAL PROPERTY SEVENZIPJBINDING_JAR) 
 GET_PROPERTY(MINGW                  GLOBAL PROPERTY MINGW) 
 GET_PROPERTY(WINDOWS                GLOBAL PROPERTY WINDOWS) 
 
@@ -725,8 +725,8 @@ SET(JAVAH_JAVA_CLASS_LIST
 
 
 add_custom_command(OUTPUT ${JBINDING_JAVAH_H_FILES}
-                   COMMAND ${JAVA_HEADER_COMPILE} -jni -d . -classpath ${SEVENZIP_JBINDING_JAR} ${JAVAH_JAVA_CLASS_LIST}  
-                   DEPENDS ${SEVENZIP_JBINDING_JAR}
+                   COMMAND ${JAVA_HEADER_COMPILE} -jni -d . -classpath ${SEVENZIPJBINDING_JAR} ${JAVAH_JAVA_CLASS_LIST}  
+                   DEPENDS ${SEVENZIPJBINDING_JAR}
                    WORKING_DIRECTORY ${JAVAH_OUTPUT_DIR}
                    COMMENT "javah: generating h-files from java classes ${JAVAH_JAVA_CLASS_LIST}"
 )
