@@ -20,6 +20,9 @@ Release - 9.20-2.00beta (Release candidate, cross-platform, based on zip/p7zip 9
 	  - #17 WIM archive format contains Udf comment
 
 	* x2 performance boot (using optimization gcc -O2)
+	
+	* SevenZip.getSevenZipVersion() and SevenZip.getSevenZipJBindingVersion() provide
+	  version information of 7-Zip and 7-Zip-JBinding
 
 Release - 4.65-1.06-extr-only (extraction only, cross-platform, based on zip/p7zip 4.65)
 	* Feature: WIM format support + tests
